--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: "zh-CN" }}">
   <head>
     <meta charset="UTF-8">
 
 {% seo %}
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    {% include head-custom.html %}
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">	
+    <style>
+        nav > a {
+		    color: #b8b61e;
+		}
+    </style>
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -20,7 +21,7 @@
       <h4 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h4>
       <nav>
         {% for link in site.links %}
-          <a href="{{ link.url }}">{{ link.title }}</a>
+          <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
         {% endfor %}
       </nav>
     </header>
