--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">	
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    {% include head-custom.html %}
     <style>
         nav > a {
-		    color: #b8b61e;
-		}
+            color: #b8b61e;
+        }
     </style>
   </head>
   <body>
