--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">	
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}_media/icon.ico">
+    <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/icon.ico">
     <style>
         nav > a {
             color: #b8b61e;
