--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "zh-CN" }}">
-  <head>
+<html lang="{{ site.lang | default: " zh-CN" }}">
+<head>
     <meta charset="UTF-8">
 
-{% seo %}
+    {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">	
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/icon.ico">
     <style>
         nav > a {
             color: #b8b61e;
         }
+
+        footer {
+            display: flex;
+            justify-content: space-around;
+        }
     </style>
-  </head>
-  <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
+</head>
+<body>
+<a id="skip-to-content" href="#content">Skip to the content.</a>
 
-    <header class="page-header" role="banner">
-      <h2 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h2>
-      <h4 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h4>
-      <nav>
+<header class="page-header" role="banner">
+    <h2 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h2>
+    <h4 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h4>
+    <nav>
         {% for link in site.links %}
-          <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
+        <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
         {% endfor %}
-      </nav>
-    </header>
+    </nav>
+</header>
 
-    <main id="content" class="main-content" role="main">
-      {{ content }}
-    </main>
+<main id="content" class="main-content" role="main">
+    {{ content }}
+</main>
 
-    <footer class="site-footer">
-        <span class="site-footer-credits">工信部备案号：辽ICP备17016257号-2</span>
-    </footer>
-  </body>
+<footer class="site-footer">
+    <span class="site-footer-credits">工信部备案号：辽ICP备17016257号-2</span>
+</footer>
+</body>
 </html>
