--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,17 @@
             justify-content: space-around;
         }
     </style>
+    <script src="{{ site.baseurl }}/tex-mml-chtml.min.js"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                displayMath: [['$$', '$$'], ['\\[', '\\]']],
+                processEscapes: true
+            }
+        });
+
+    </script>
 </head>
 <body>
 <a id="skip-to-content" href="#content">Skip to the content.</a>
