--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
         {% for link in site.links %}
         <a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
         {% endfor %}
+        <a href="{{ site.github_repo }}/edit/main/{{ page.path }}" target="_blank">编辑这个页面</a>
     </nav>
 </header>
 
