--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
             display: flex;
             justify-content: space-around;
         }
+
+        .page-header {
+            padding: 2rem 3rem;
+        }
     </style>
     <script src="{{ site.baseurl }}/tex-mml-chtml.min.js"></script>
     <script type="text/x-mathjax-config">
@@ -28,6 +32,8 @@
                 processEscapes: true
             }
         });
+
+
 
 
 
