add gem 'jekyll-mathjax'
Signed-off-by: 毛巳煜 <eric.mao@lemonit.cn>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
             padding: 2rem 3rem;
         }
     </style>
+    <script type="text/javascript" async src="{{ '/assets/js/MathJax.js' | relative_url }}"></script>
 </head>
 <body>
 <a id="skip-to-content" href="#content">Skip to the content.</a>
