--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
             padding: 2rem 3rem;
         }
     </style>
-	<script type="text/javascript" async src="{{ '/assets/js/MathJax.js' | relative_url }}"></script>
+	<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 </head>
 <body>
 <a id="skip-to-content" href="#content">Skip to the content.</a>
