--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
             padding: 2rem 3rem;
         }
     </style>
-	<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+	<script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 </head>
 <body>
 <a id="skip-to-content" href="#content">Skip to the content.</a>
