--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
             }
         };
     </script>
-    <script type="text/javascript" async src="{{ site.baseurl }}/script/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script type="text/javascript" async src="{{ site.baseurl }}/_script/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 </head>
 <body>
