--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
         };
     </script>
     <script type="text/javascript" async src="{{ site.baseurl }}/assets/js/mathjax@3/es5/tex-mml-chtml.js"></script>
+	<script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
 
 </head>
 <body>
